<resources>
    <string name="app_name">OnGi</string>

    <string-array name="role_array">
        <item>guardian</item>
        <item>senior</item>
    </string-array>
    <string name="check_location">현위치\n확인하기</string>
    <string name="check_alert">알림\n확인하기</string>
    <string name="clear_alert">알림\n해제하기</string>
    <string name="greeting">안녕하세요, 보호자님!</string>
    <string name="logout">로그아웃</string>
    <string name="title2">홍길동님은 현재\n안전한 상태 입니다. 😊</string>


</resources>